# amdtool_linux

./: CMakeLists.txt  README.md  amdtool.desktop  main.cpp  main.py  tab_gaming.h  tab_performance.h  tab_settings.h
include/amd_smi/: amdsmi.h
